--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     </p>
 
     <div>
-      <img class="paintings" src="Images/Painting/aurora.jpg" alt="Aurora Borealis">
-      <img class="paintings" src="Images/Painting/roses.jpg" alt="Roses">
-      <img class="paintings" src="Images/Painting/beach.jpg" alt="Fiji">
-      <img class="paintings" src="Images/Painting/starry.jpg" alt="Starry Night">
-      <img class="paintings" src="Images/Painting/moon.jpg" alt="Moon">
-      <img class="paintings" src="Images/Painting/mountain.jpg" alt="Mountain">
-      <img class="paintings" src="Images/Painting/africa.jpg" alt="Africa" />
+      <img class="paintings" src="Images/Painting/aurora.JPG" alt="Aurora Borealis">
+      <img class="paintings" src="Images/Painting/roses.JPG" alt="Roses">
+      <img class="paintings" src="Images/Painting/beach.JPG" alt="Fiji">
+      <img class="paintings" src="Images/Painting/starry.JPG" alt="Starry Night">
+      <img class="paintings" src="Images/Painting/moon.JPG" alt="Moon">
+      <img class="paintings" src="Images/Painting/mountain.JPG" alt="Mountain">
+      <img class="paintings" src="Images/Painting/africa.JPG" alt="Africa" />
     </div>
   </div>
 
