--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>
       I like to paint in my spare time following along Youtube videos.
       <br>
-      I'm a still a rookie! Please be nice.
+      I'm still a rookie! Please be nice.
     </p>
 
     <div>
